# ars_learn

./: .env  .env_sqlite  .gitignore  Cargo.toml  readme.md  rustfmt.toml  test.db3  test.txt
AMQP-a/: Cargo.toml
AMQP-a/examples/: tokio-ampq-exam.rs
AMQP-a/src/: main.rs
DTT-a/: Cargo.toml  readme.md
actix-web-a/: Cargo.toml
actix-web-a/examples/: a-exam.rs
actix-web-a/src/: main.rs
async-log-watch-a/: Cargo.toml
async-log-watch-a/src/: main.rs
async_rust/: Cargo.toml
async_rust/examples/: self_ref_box_pin_exam.rs  self_ref_exam.rs  self_ref_exam2.rs  self_ref_pin_exam.rs
axum-web-a/: Cargo.toml
axum-web-a/examples/: a-demo.rs  example-anyhow-error-response.rs  example-consume-body-in-extractor-or-middleware.rs  example-customize-extractor-error.rs  example-customize-path-rejection.rs  example-diesel-async-postgres.rs  example-form.rs  example-global-404-handler.rs  example-handle-head-request.rs  example-jwt.rs
crossbeam-demo/: Cargo.toml
crossbeam-demo/examples/: wait_group_example.rs
examples/: buffer_fixed.rs  buffer_loop.rs  cell_example.rs  closure-fn-exam.rs  condvar_examples.rs  env_example.rs  iter_example.rs  mutex_barrier_example.rs  owner-exam.rs  panic_exam.rs  rc_arc_example.rs  ref_examples.rs  should_panic_exm.rs  str_eq.rs  tokio_stdin.rs  tokio_try_join_example.rs
exm_projs/toml_setting/: Cargo.toml  config.toml
exm_projs/toml_setting/src/: main.rs
governor-demo/: Cargo.toml  readme.md
insta-a/: Cargo.toml  readme.md
insta-a/src/: main.rs
kafka-a/: Cargo.toml
kafka-a/examples/: kafka-produce-exam.rs  rdkafka-produce-exam.rs
kafka-a/src/: kafka_client.rs  lib.rs  settings.rs
log4rs-a/: Cargo.toml
log4rs-a/src/: date_util.rs  lib.rs  log4rs_config.rs  main.rs
macros-a/: Cargo.toml
macros-a/examples/: declarative-macros.rs  hash-map-macros.rs  procedural-macros.rs
macros-a/procedural-macros/: Cargo.toml
macros-a/procedural-macros/src/: lib.rs
macros-a/src/: lib.rs  main.rs
ntex-web-a/: Cargo.toml  README.MD
ntex-web-a/migrations/2023-11-11-144744_wa_users/: up.sql
ntex-web-a/src/: main.rs  main_bak.rs
ntex-web-a/src/common/: biz_error.rs  consts.rs  settings.rs
ntex-web-a/src/middleware/: json_result.rs
ntex-web-a/src/user/: user_repository.rs
ntex-web-diesel-async/: Cargo.toml
ntex-web-diesel-async/migrations/2023-11-11-144744_wa_users/: down.sql
ntex-web-diesel-async/src/: lib.rs  main.rs
ntex-web-diesel-async/src/auth/: models.rs
ntex-web-diesel-async/src/common/: biz_code.rs  db_mg.rs
ntex-yew/: Cargo.toml
ntex-yew/examples/: na_getting_started.rs  nb_app_cfg.rs  nb_app_scope.rs  nc_app_state.rs  nd_app_mutable_state.rs  ne_extractors.rs  nf_extractor_state.rs  nf_extractor_state_thread.rs  ng_middleware.rs  ng_middleware_redirect.rs  nh_stream_either.rs  ni_error.rs  ni_error_logging.rs
ntex-yew/src/: diesel_ns_server.rs  main.rs
ntex-yew/src/diesel_ns/: actions.rs  controller.rs  mod.rs  models.rs  schema.rs
pingora-a/: Cargo.toml
pnet-demo/: Cargo.toml
pnet-demo/examples/: get_ip_addr_exam.rs
pnet-demo/src/: main.rs
rate-limiter/: Cargo.toml
rate-limiter/examples/: fixed_window_algorithm_exam.rs
rayon-demo/: Cargo.toml
rayon-demo/examples/: par_iter_sum_exam.rs
rayon-demo/src/: main.rs
redis-a/: Cargo.toml  readme.md
redis-a/examples/: async_connection_exam.rs  client_set_get_exam.rs
src/: main.rs
tide-a/: Cargo.toml  readme.md
tide-a/examples/: tide-governor-exam.rs
tide-a/src/: main.rs
web-a/: Cargo.toml
web-a/migrations/2023-11-07-145028_hf_dict/: up.sql
web-a/src/: hf_dict_ctrl.rs  hf_dict_dao.rs  lib.rs  main.rs  models.rs  schema.rs  schemas.rs
web-a/src/auth/: error.rs  filter.rs  jwt.rs  jwt_handler.rs  mod.rs  models.rs
web-a/src/common/: api_res.rs  biz_code.rs  biz_err.rs  biz_err2.rs  biz_error.rs  biz_res.rs  db_mg.rs  error.rs  error_bak.rs  mod.rs  settings.rs
web-a/src/dict/: controller.rs  service.rs
web-a/src/middleware/: auth_filter.rs  auth_handler.rs  mod.rs  resp_data.rs
web-a/src/user/: mod.rs  user_handler.rs  user_repository.rs
web-diesel-async/: Cargo.toml  diesel.toml
web-diesel-async/src/: main.rs
web-diesel-async/src/auth/: jwt_handler.rs
web-diesel-async/src/common/: biz_error.rs  biz_resp.rs  settings.rs
web-diesel-async/src/middleware/: auth_filter.rs  auth_handler.rs  json_result.rs  mod.rs
web-diesel-async/src/user/: mod.rs  user_handler.rs  user_models.rs  user_repository.rs
web-socket/: .env  Cargo.toml
web-socket/examples/: ws_client_close.rs  ws_client_demo.rs  ws_client_send_close_exit.rs
web-socket/src/: ws_client.rs  ws_server.rs
web-socket/src/tokio_tungstenite/: ws_client.rs  ws_server.rs
yew-demo/: Cargo.toml
yew-demo/src/: main.rs
