[package]
name = "ars_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "axum-web-a",
    "ntex-web-a",
    "ntex-web-diesel-async",
    "web-socket",
    "ntex-yew",
    "crossbeam-demo",
    "rayon-demo",
    "yew-demo",
    "exm_projs/toml_setting"
    , "tide-a", "governor-demo", "actix-web-a", "insta-a",
    "pnet-demo",
    "async-log-watch-a",
    "kafka-a",
    "redis-a",
]

# [[bin]]
# name = "ws-server"
# path = "projs/web-socket/src/ws_server"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
config = "0.13.3"
