[package]
name = "AMQP-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "net"] }
lapin = {version = "2.3.1", features = ["amq-protocol-codegen"]}
#tokio-amqp = "2.0.0"
futures-lite = "2.1.0"
async-global-executor = "2.4.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"