[package]
name = "axum-web-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = { version = "0.7.1", features = ["macros"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
bb8 = "0.8"
diesel = "2"
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
jsonwebtoken = "9.1.0"
once_cell = "1.8"
http-body-util = "0.1.0"
hyper = "1.0.0"
tower = "0.4"
tower-http = { version = "0.5.0", features = ["map-request-body", "util", "cors"] }
thiserror = "1.0"
