[package]
name = "log4rs-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "1.1.0", features = ["tokio"] }

log = "0.4.20"
log4rs = { version = "1.3.0", features = ["gzip"] }
rand = "0.8.5"
strum_macros = "0.26.1"
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = [] }
byte-unit = "4.0.17"
log-panics = { version = "2", features = ["with-backtrace"] }
once_cell = "1.18.0"

[features]
env-prod = []
env-dev = []
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["env-dev"]