[package]
name = "ntex-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.7", features = ["tokio"] }
anyhow = { version = "1.0.75", features = [] }
serde = "1.0.190"
futures = "0.3.29"
