[package]
name = "ntex-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ntex-diesel"
path = "src/diesel_ns_server.rs"

[dependencies]
ntex = { version = "0.7", features = ["tokio"] }
anyhow = { version = "1.0.75", features = [] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.29"
ntex-files = "0.3.0"
ntex-session = "0.3.0"
ntex-service = "1.2.7"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4"
dotenv = "0.15.0"
diesel = { version = "2.1.3", features = ["sqlite", "r2d2"] }
r2d2 = "0.8.10"
uuid = { version = "1", features = ["serde", "v4"] }
