[package]
name = "redis-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "net"] }
redis = { version = "0.24.0", features = ["tokio-comp", "cluster"] }
