[package]
name = "web-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.7.8", features = ["tokio"] }
ntex-bytes = "0.1.21"
dotenvy = "0.15"
anyhow = { version = "1.0.75", features = [] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
futures = "0.3.29"
ntex-files = "0.3.0"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4"
dotenv = "0.15.0"
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.10"
#uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "9.1.0"
thiserror = "1.0.50"
config = "0.13.3"
serde_derive = "1.0.192"
#pin-project = "1.1.3"
