[package]
name = "ws_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.29" }
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1" }
anyhow = { version = "1.0.75", features = [] }
tracing = { version = "0.1.40", features = [] }
tracing-subscriber = { version = "0.3.17", features = [] }
