[package]
name = "web_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "ws-server"
path = "src/ws_server.rs"
[[bin]]
name = "ws-client"
path = "src/ws_client.rs"

[dependencies]
futures = { version = "0.3.29" }
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.1" }
anyhow = { version = "1.0.75", features = [] }
tracing = { version = "0.1.40", features = [] }
tracing-subscriber = { version = "0.3.17", features = [] }
futures-util = "0.3.29"
futures-channel = "0.3.29"
url = "2.4.1"
